--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,54 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "testprogram gdb",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/GObjects/test_program",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "${workspaceFolder}/upnptvserver.out",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/out",
-            "args": [ "media/video/test.mp4 test.mkv"],
+            "program": "${workspaceFolder}/build/upnptvserver.out",
+            "args": [ ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
